Moved the shared Simulator launch into a JUnit extension (gh #899)
SimulatorGuiTest owned its Simulator through per-class @BeforeAll/
@AfterAll, which would collide with the one-instance-per-JVM constraint
as soon as a second GUI test class existed. The new SimulatorFixture
extension owns the launch instead: the first GUI test class to run
launches the Simulator, later classes reuse it, and the frame is
disposed once at the end of the whole test run, via an auto-closed
resource in the root extension store. The environment checks (display
assumption, preference isolation guard), the EDT exception collection
and the shared helpers (loadGrammar, waitFor, model/frame accessors)
moved along into the fixture; a GUI test class now just declares
@ExtendWith(SimulatorFixture.class) and loads a fresh scratch grammar
per test.

A new test pins the fail-fast behaviour of the constructor guard
introduced in the previous commit: constructing a Simulator next to the
fixture-owned one must throw immediately, with a message naming the
constraint.